--- a/SSKeychain.xcodeproj/xcshareddata/xcschemes/SSKeychain-OSX.xcscheme
+++ b/SSKeychain.xcodeproj/xcshareddata/xcschemes/SSKeychain-OSX.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0610"
+   LastUpgradeVersion = "0700"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,23 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "E8A666331A844CC400287CA3"
+               BlueprintIdentifier = "365EED871B2F5439006A537C"
                BuildableName = "SSKeychain.framework"
-               BlueprintName = "SSKeychain iOS"
-               ReferencedContainer = "container:SSKeychain.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "E8A666541A844D3A00287CA3"
-               BuildableName = "SSKeychain iOS Tests.xctest"
-               BlueprintName = "SSKeychain iOS Tests"
+               BlueprintName = "SSKeychain-OSX"
                ReferencedContainer = "container:SSKeychain.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -46,9 +32,9 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "E8A666541A844D3A00287CA3"
-               BuildableName = "SSKeychain iOS Tests.xctest"
-               BlueprintName = "SSKeychain iOS Tests"
+               BlueprintIdentifier = "365EED901B2F5439006A537C"
+               BuildableName = "SSKeychainTests.xctest"
+               BlueprintName = "SSKeychain-OSXTests"
                ReferencedContainer = "container:SSKeychain.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -56,12 +42,14 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "E8A666331A844CC400287CA3"
+            BlueprintIdentifier = "365EED871B2F5439006A537C"
             BuildableName = "SSKeychain.framework"
-            BlueprintName = "SSKeychain iOS"
+            BlueprintName = "SSKeychain-OSX"
             ReferencedContainer = "container:SSKeychain.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
@@ -71,13 +59,14 @@
       buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "E8A666331A844CC400287CA3"
+            BlueprintIdentifier = "365EED871B2F5439006A537C"
             BuildableName = "SSKeychain.framework"
-            BlueprintName = "SSKeychain iOS"
+            BlueprintName = "SSKeychain-OSX"
             ReferencedContainer = "container:SSKeychain.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -93,9 +82,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "E8A666331A844CC400287CA3"
+            BlueprintIdentifier = "365EED871B2F5439006A537C"
             BuildableName = "SSKeychain.framework"
-            BlueprintName = "SSKeychain iOS"
+            BlueprintName = "SSKeychain-OSX"
             ReferencedContainer = "container:SSKeychain.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
